# IV-MP-T4-Installer

./: .gitignore  CMakeLists.txt  Installer.sln  Server.sln
IVMP Lua/IVMP Lua/: IVMP Lua.cpp  IVMP Lua.vcxproj  IVMP Lua.vcxproj.filters  apiLua.cpp  apiLua.h  apiLuaParams.cpp  apiLuaParams.h  apiMysql.cpp  apiMysql.h  blipFunctions.cpp  cpFunctions.cpp  dialogFunctions.cpp  events.h  handler.cpp  handler.h  npcFunctions.cpp  objectFunctions.cpp  playerEvents.cpp  playerFunctions.cpp  playerFunctions.h  sha.h  sha2.cpp  sresult.cpp  sresult.h  stdafx.cpp  vehicleFunctionscpp.cpp  worldFunctions.cpp
IVMP Lua/IVMP Lua/Release/: IVMP Lua.pch
IVMP Lua/IVMP Lua/Release/IVMP Lua.tlog/: IVMP Lua.write.1u.tlog  link.read.1.tlog  link.write.1.tlog
IVMP Lua/LUA/: lua.h  lua5.3.0-static.lib  lua5.3.0.exp  lua5.3.lib  luac.exp  luac.lib
IVMP Lua/MySQL/: dump.sql  libmysql.lib
IVMP Lua/MySQL/debugLib/: libmysql.lib
IVMP Lua/Release/IVMP Lua.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  IVMP Lua.lastbuildstate  link.command.1.tlog  link.delete.1.tlog
Installer/: Form1.Designer.cs  Form1.cs  Form1.resx  Installer.csproj  Installer.sln  Program.cs
Installer/Installer/: Installer.csproj  Program.cs
Installer/Properties/: AssemblyInfo.cs
