cmake_minimum_required(VERSION 3.12.2)

project(Server)

add_subdirectory(Client)
add_subdirectory(clientLibs)
add_subdirectory(ivmpServer)
add_subdirectory(ivmpServerLauncher)
add_subdirectory(masterList)
add_subdirectory(ivmpServerMasterCon)
add_subdirectory(ivmpGameLauncher2)
add_subdirectory(ivmpServerArgonath)
add_subdirectory(Raknet)
add_subdirectory(4Hook)
add_subdirectory(testHook)
add_subdirectory(ListTest)
add_subdirectory(MasterCon64)
